# anheng-CodeAudit

./: CHANGELOG.md  CONTRIBUTING.md  CVEList.md  DEPLOY_LOCAL_REPO.md  DISCLAIMER.md  README.md  README_EN.md  SECURITY.md  debug_scan.py  docker-compose.localrepo.yml  docker-compose.override.yml  docker-compose.prod.cn.yml  docker-compose.prod.yml  docker-compose.yml  tools.txt
backend/: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  check_docker_direct.py  check_sandbox.py  docker-entrypoint.sh  env.example  main.py  pyproject.toml  requirements-lock.txt  requirements.txt  start.sh  verify_llm.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  004_add_prompts_and_rules.py  006_add_agent_tables.py  007_add_agent_checkpoint_tables.py  008_add_files_with_findings.py  009_local_auth_and_admin.py  010_add_schedules_and_knowledge.py  011_add_schedule_windows.py  012_add_schedule_scan_mode.py  013_unify_statuses_and_ai_suggestion.py  014_add_dataflow_to_audit_issues.py  015_add_scheduled_scan_id.py  016_add_code_patterns_to_audit_rules.py  017_add_code_analysis_results.py  018_add_project_scan_mode.py  019_add_agent_task_total_lines.py  4c280754c680_merge_heads.py  5fc1cc05d5d0_add_missing_user_fields.py  73889a94a455_add_is_active_to_projects.py  add_source_type_to_projects.py  bb3ab402d17a_add_total_lines_to_agent_tasks.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/core/: config.py  encryption.py  security.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/models/: __init__.py  agent_task.py  analysis.py  audit.py  audit_rule.py  knowledge_entry.py  project.py  prompt_template.py  scheduled_scan.py  user.py  user_config.py
backend/app/schemas/: audit_rule.py  prompt_template.py  token.py  user.py
backend/app/services/: ai_investigation.py  archive_utils.py  git_ssh_service.py  init_knowledge.py  init_templates.py  quick_scan.py  report_generator.py  rule_generator.py  scanner.py  scheduled_scans.py  zip_storage.py
backend/app/services/agent/: __init__.py  config.py  event_manager.py  json_parser.py
backend/app/services/code_analysis/: __init__.py  parser.py  service.py
backend/app/services/compiled_scan/: __init__.py  collector.py  engine.py
backend/app/services/llm/: __init__.py  base_adapter.py  factory.py  memory_compressor.py  prompt_cache.py  service.py  tokenizer.py  types.py
backend/app/services/rag/: __init__.py  embeddings.py  indexer.py  retriever.py  splitter.py
backend/app/utils/: repo_utils.py
backend/scripts/: add_batch_3_to_6.py  add_batch_3_to_6.sql  add_batch_rules.py  add_batches_7_to_26.sql  add_rules.sql  analyze_rule_categories.sql  analyze_rules_for_classification.sql  check_rule_set_themes.sql  classify_all_rules.sql  create_agent_demo_data.py  fix_batch_rules_editable.sql  generate_all_remaining_batches.py  import_all.sh  reclassify_rules.sql  rename_batch_rule_sets.sql  rename_rule_sets_by_theme.sql  reset_and_classify.sql  simple_classify.sql  test_verification_sandbox.py  unified_classify_rules.sql  update_quality_rules.sql  update_rule_set_types_by_content.sql  update_rule_type_to_quality.sql  verify_classification.sql
backend/scripts/batch_rules_individual/: batch_10.json  batch_11.json  batch_12.json  batch_13.json  batch_14.json  batch_15.json  batch_16.json  batch_17.json  batch_18.json  batch_19.json  batch_20.json  batch_21.json  batch_22.json  batch_23.json  batch_24.json  batch_25.json  batch_26.json  batch_3.json  batch_4.json  batch_5.json  batch_6.json  batch_7.json  batch_8.json  batch_9.json
backend/tests/: conftest.py  test_agent_circuit_breaker.py  test_agent_config.py  test_agent_context.py  test_agent_fallback.py  test_agent_persistence.py  test_agent_rate_limiter.py  test_agent_retry.py  test_agent_state.py  test_agent_validation.py  test_api_agent_tasks.py  test_api_deps.py  test_api_projects.py  test_api_prompts.py  test_api_rules.py  test_api_tasks.py  test_auth_api.py  test_code_analysis_endpoints.py  test_code_analysis_service.py  test_core_encryption.py  test_core_security.py  test_event_manager.py  test_event_manager_deep.py  test_executor.py  test_file_selection.py  test_file_selection_e2e.py  test_json_parser.py  test_json_parser_deep.py  test_llm_base_adapter.py  test_llm_factory.py  test_models.py  test_prompt_cache.py  test_report_generator.py  test_scanner_utils.py  test_schemas.py  test_stream_handler.py  test_tokenizer.py  test_tools_base_deep.py  test_v6_features.py
backend/tests/agent/: __init__.py  conftest.py  run_tests.py  test_agents.py  test_tools.py
backend/tests/fixtures/compiled/: README.md  build_fixtures.sh  sample-min.apk
backend/tests/iac/: test_collect.py  test_iac_scan.py  test_init_templates.py
backend/tests/iac/fixtures/: Dockerfile.bad  Dockerfile.good  (+2 more)
backend/uploads/: .gitkeep
(+388 files in other folders)
